we haz working test!

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,8 @@
 #this is just a test, typically the tikloo folder will be next to your source or in a libs dir, but here you must make a symbolic link for it to work (or copy the dir)
 cmake_minimum_required(VERSION 2.8)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g ")
+
 add_subdirectory(tikloo)
 include_directories( ${TIKLOO_INCLUDE_DIRS} )
 
