got some file embedding, it always converts though and default fonts make several copies

--- a/tikloo/CMakeLists.txt
+++ b/tikloo/CMakeLists.txt
@@ -38,6 +38,25 @@ else()
 
 endif()
 
+#embed fonts (taken from https://github.com/rkitover/bin2c)
+add_executable(bin2c bin2c.c) 
+file(GLOB FONTS "${CMAKE_CURRENT_SOURCE_DIR}/fonts/*.*")
+foreach(FONT ${FONTS})
+    get_filename_component(FFNAME ${FONT} NAME_WE)
+    get_filename_component(FFEXT ${FONT} EXT)
+    if(NOT ${FFEXT} MATCHES ".h") 
+        list(APPEND FONTCFILES ${FFNAME}.h)
+        add_custom_command(OUTPUT ${FFNAME}.h
+            COMMAND bin2c ${FONT} ${CMAKE_CURRENT_SOURCE_DIR}/fonts/${FFNAME}.h ${FFNAME}
+            COMMENT "Converting ${FONT}"
+            DEPENDS bin2c
+        )
+    endif()
+endforeach()
+
+set_source_files_properties(${FONTCFILES} PROPERTIES GENERATED TRUE)
+
+#finally the main library
 set(TIKLOO_INCLUDE_DIRS ${TIKLOO_INCLUDE_DIRS} PARENT_SCOPE)
 set(TIKLOO_LDFLAGS ${TIKLOO_LDFLAGS} PARENT_SCOPE)
 
@@ -55,4 +74,7 @@ add_library(tikloo STATIC
     timer.c
     ${DEFAULT_DRAW_SRC}
     ${PUGL_SRC}
+    ${FONTCFILES}
 )
+
+add_dependencies(tikloo bin2c)
