fix selection positon, polishing input still trying to get entry to be selected at show

--- a/test/meson.build
+++ b/test/meson.build
@@ -5,17 +5,20 @@ subdir('tikloo')
 executable( 'test_ui',
             'test.c',
             link_with : tikloo,
+            link_args : '-lm',
             dependencies : tk_deps
             )
 
 executable( 'strtest',
             'strtest.c',
             link_with : tikloo,
+            link_args : '-lm',
             dependencies : tk_deps
             )
 
 executable( 'unittest',
             'unittest.c',
             link_with : tikloo,
+            link_args : '-lm',
             dependencies : tk_deps
             )
